changed small layout issues in the board html and created a board image folder

--- a/styles/board.css
+++ b/styles/board.css
@@ -44,12 +44,22 @@ h1 {
     gap: 0.25rem;
     border: 1px;
     border-radius: 10px;
+    transition: box-shadow 100ms ease-in-out, background-color 100ms ease-in-out;
+}
+
+.add-task-btn:hover {
+    background-color: #29ABE2;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .add-task {
     font-weight: 700;
     font-size: 1.313rem;
     color: #fff;
+}
+
+.add-task:hover {
+    cursor: pointer;
 }
 
 .inputgroup {
@@ -59,12 +69,17 @@ h1 {
     border: 1px solid #A8A8A8;
     border-radius: 10px;
     background-color: #fff;
+    padding: 0.5rem 1rem;
+}
+
+.inputgroup:hover {
+    cursor: pointer;
 }
 
 .find-task-input {
     flex: 1;
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
+    /* padding: 0.5rem 1rem; */
+    /* border-radius: 10px; */
     background-color: #fff;
     outline: none;
     font-weight: 400;
@@ -72,11 +87,33 @@ h1 {
     color: #000000;
 }
 
+.align-input-divider-btn {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.input-group-divider {
+    height: 32px;
+    border: 1px solid #D1D1D1;
+}
+
 .find-task-btn {
-    padding-inline: 1rem;
-    border-radius: 10px;
+    /* padding-inline: 1rem; */
+    /* border-radius: 10px; */
     background-color: #fff;
     outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hover-search-icon {
+    border-radius: 50%;
+}
+
+.hover-search-icon:hover {
+    background-color: #EEEEEE;
 }
 
 .inputgroup:focus-within {
@@ -106,9 +143,21 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.board-card-header span {
     font-weight: 700;
     font-size: 1.25rem;
     color: #42526E;
+}
+
+.highlight-add-task-to-section:hover {
+    cursor: pointer;
+}
+
+.highlight-add-task-to-section:hover rect,
+.highlight-add-task-to-section:hover path {
+    stroke: #29ABE2;
 }
 
 .empty-cards {
@@ -141,6 +190,10 @@ main {
     font-size: 1rem;
     color: #fff;
     text-align: center;
+}
+
+.card-header:hover {
+    cursor: pointer;
 }
 
 h3 {
@@ -181,6 +234,10 @@ p {
     font-weight: 400;
     font-size: 0.75rem;
     color: #000000;
+}
+
+.subtask-txt:hover {
+    cursor: pointer;
 }
 
 .users {
